working version from local machine, may differ from godaddy files that were modified via ssh on server

--- a/archive.html
+++ b/archive.html
@@ -1,25 +1,12 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-        <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>moo.html</title></head><body>
-        <font size="5" color="orange">Archived Games</font><br>
-        <br>
-<br><br>
-Match start:May 23, 2013, 11:45 pm<br>
-<table style="text-align: left; width: 400px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 200px;">Synergy LV 15s<br> </td>
-<td style="vertical-align: top; width: 100px;">25<br>  </td>"
-<td style="vertical-align: top; width: 100px;">25<br>  </td>"
-<td style="vertical-align: top; width: 100px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 200px;">test game<br>  </td>
-<td style="vertical-align: top; width: 100px;">10<br> </td>
-<td style="vertical-align: top; width: 100px;">13<br> </td>
-<td style="vertical-align: top; width: 100px;">0<br> </td>
-</tr>
-</tbody>
-</table>
-<br><br>
+<html>
+    <head>
+        <META http-equiv="Content-Style-Type" content="text/css">
+        <title>VolleyArchive.html</title>
+        <LINK href="special.css" rel="stylesheet" type="text/css">
+    </head>
+<body>
+    <p>Archived Games</p><br>
+        
+</body></html>
