--- a/current10.html
+++ b/current10.html
@@ -48,6 +48,6 @@ fclose($file);
 <br>
 <br>
 page last updated :  <?php echo date('F jS, Y g:i:s'); ?>.<br><br>
-<a href="http://192.168.1.102/archive.html/">ARCHIVE PAGE</a>
+<a href="http://www.foosechek.org/archive.html/">ARCHIVE PAGE</a>
 </body></html>
 
