--- a/current.html
+++ b/current.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-        <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>moo.html</title></head><body>
-        <font size="5" color="orange">Current Game</font><br>
+<html>
+    <head>
+        <META http-equiv="Content-Style-Type" content="text/css">
+        <title>VolleyScore.html</title>
+        <LINK href="special.css" rel="stylesheet" type="text/css">
+    </head>
+<body>
+    <p>Current Game</p><br>
 
-<br>
 <?php
 $file = fopen("match.txt","r");
 $fields = fgetcsv($file, 100, "\t");
@@ -26,27 +30,28 @@ $g3h = $fields[0];
 $g3a = $fields[1];
 fclose($file);
 ?>
-
-<?php echo "Match start :" . $time ?><br>
-<table style="text-align: left; width: 400px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<q>
+    <?php echo "Match start :" . $time ?></q><br>
+<table style="text-align: left; width: 600px; height: 90px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="vertical-align: top; width: 200px;">Synergy LV 15s<br> </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g1h?><br>  </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g2h?><br>  </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g3h?><br>  </td>
+      <td style="vertical-align: top; width: 402px;">Synergy LV 15s<br> </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g1h?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g2h?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g3h?><br>  </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; width: 200px;"><?php echo $opponent?><br>  </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g1a?><br> </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g2a?><br> </td>
-      <td style="vertical-align: top; width: 100px;"><?php echo $g3a?><br> </td>
+      <td style="vertical-align: top; width: 402px;"><?php echo $opponent?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g1a?><br> </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g2a?><br> </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g3a?><br> </td>
     </tr>
   </tbody>
 </table>
 <br>
 <br>
-page last updated :  <?php echo date('F jS, Y g:i:s'); ?>.<br><br>
-<a href="http://192.168.1.102/archive.html/">ARCHIVE PAGE</a>
+<q>
+page last updated :  <?php echo date('F jS, Y g:i:s'); ?>.</q><br><br>
+<a href="http://www.foosechek.org/archive.html/">ARCHIVE PAGE</a>
 </body></html>
 
