--- a/current.html
+++ b/current.html
@@ -6,8 +6,6 @@
         <LINK href="special.css" rel="stylesheet" type="text/css">
     </head>
 <body>
-    <p>Current Game</p><br>
-
 <?php
 $file = fopen("match.txt","r");
 $fields = fgetcsv($file, 100, "\t");
@@ -28,35 +26,42 @@ $file = fopen("game3.txt","r");
 $fields = fgetcsv($file, 100, "\t");
 $g3h = $fields[0];
 $g3a = $fields[1];
+$file = fopen("game4.txt","r");
+$fields = fgetcsv($file, 100, "\t");
+$g4h = $fields[0];
+$g4a = $fields[1];
+$file = fopen("game5.txt","r");
+$fields = fgetcsv($file, 100, "\t");
+$g5h = $fields[0];
+$g5a = $fields[1];
 fclose($file);
 ?>
-<q>
-    <?php echo "Match start :" . $time ?></q><br>
+<p1><br>
+<?php echo "Match start :" . $time ?></p1><br>
 <table style="text-align: left; width: 600px; height: 90px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+      <td style="vertical-align: top; width: 4002x;">POWER 16s LV<br> </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g1h?><br>  </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g2h?><br>  </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g3h?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g4h?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g5h?><br>  </td>
     </tr>
     <tr>
       <td style="vertical-align: top; width: 402px;"><?php echo $opponent?><br>  </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g1a?><br> </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g2a?><br> </td>
       <td style="vertical-align: top; width: 66px;"><?php echo $g3a?><br> </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g4a?><br>  </td>
+      <td style="vertical-align: top; width: 66px;"><?php echo $g5a?><br>  </td>
     </tr>
   </tbody>
 </table>
+<br><p1>
+<?php date_default_timezone_set('America/New_York'); ?>
+last updated :  <?php echo date('M j, Y g:i:s'); ?></p1><br><br>
 <br>
 <br>
-<?php
-$file = fopen("message.txt","r");
-$message = fread($file);
-?>
-message : <?php echo $message ?>
-<q>
-page last updated :  <?php echo date('F jS, Y g:i:s'); ?>.</q><br><br>
-<a href="archive.html">ARCHIVE PAGE</a>
 </body></html>
 
