--- a/archive_scores.html
+++ b/archive_scores.html
@@ -1,276 +1,202 @@
-<p1>Match start:Feb 2, 2014, 4:15pm</p1>
+<p1>Match start:October 16, 2013, 5:58 pm</p1>
 <table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
 <td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">26<br>  </td>"
+<td style="vertical-align: top; width: 66px;">21<br>  </td>
+<td style="vertical-align: top; width: 66px;">25<br>  </td>
 <td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 17LV <br>  </td>
+<td style="vertical-align: top; width: 402px;">Emmaus<br>  </td>
+<td style="vertical-align: top; width: 66px;">17<br> </td>
+<td style="vertical-align: top; width: 66px;">24<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br>  </td>
+<td style="vertical-align: top; width: 66px;">0<br>  </td>
+</tr>
+</tbody>
+</table>
+<br><br>
+<p1>Match start:October 3, 2013, 6:01 pm</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">26<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">Central Catholic<br>  </td>
+<td style="vertical-align: top; width: 66px;">19<br> </td>
+<td style="vertical-align: top; width: 66px;">24<br> </td>
+<td style="vertical-align: top; width: 66px;">19<br> </td>
+</tr>
+</tbody>
+</table>
+<br><br>
+<p1>Match start:October 1, 2013, 6:44 pm</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">Allen<br>  </td>
+<td style="vertical-align: top; width: 66px;">4<br> </td>
+<td style="vertical-align: top; width: 66px;">7<br> </td>
 <td style="vertical-align: top; width: 66px;">16<br> </td>
-<td style="vertical-align: top; width: 66px;">18<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 </tbody>
 </table>
 <br><br>
-
-<p1>Match start:Feb 2, 2014, 2:15pm</p1>
+<p1>Match start:September 28, 2013, 6:17 pm</p1>
 <table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
 <td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">19<br>  </td>"
+<td style="vertical-align: top; width: 66px;">10<br>  </td>
 </tr>
 <tr>
-<td style="vertical-align: top; width: 402px;">Club Integ 17 <br>  </td>
-<td style="vertical-align: top; width: 66px;">11<br> </td>
-<td style="vertical-align: top; width: 66px;">21<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 402px;">Hempfield - finals<br>  </td>
+<td style="vertical-align: top; width: 66px;">22<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br> </td>
+<td style="vertical-align: top; width: 66px;">15<br> </td>
 </tr>
 </tbody>
 </table>
 <br><br>
-
-<p1>Match start:Feb 2, 2014, 1:00pm</p1>
+<p1>Match start:September 28, 2013, 5:48 pm</p1>
 <table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
 <td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">0<br>  </td>"
 <td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 <tr>
-<td style="vertical-align: top; width: 402px;">Quandomania <br>  </td>
+<td style="vertical-align: top; width: 402px;">Northern Allegheny<br>  </td>
+<td style="vertical-align: top; width: 66px;">23<br> </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+</tbody>
+</table>
+<br><br>
+<p1>Match start:September 28, 2013, 4:53 pm</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">13<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">0<br>  </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">Hempfield<br>  </td>
+<td style="vertical-align: top; width: 66px;">25<br> </td>
+<td style="vertical-align: top; width: 66px;">16<br> </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+</tbody>
+</table>
+<br><br>
+<p1>Match start:September 28, 2013, 3:40 pm</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
+<td style="vertical-align: top; width: 66px;">0<br>  </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">Seneca Valley<br>  </td>
 <td style="vertical-align: top; width: 66px;">9<br> </td>
 <td style="vertical-align: top; width: 66px;">16<br> </td>
 <td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 </tbody>
 </table>
 <br><br>
-
-<p1>Match start:Feb 2, 2014, 10:00am</p1>
+<p1>Match start:September 28, 2013, 1:56 pm</p1>
 <table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
 <td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">23<br>  </td>"
 <td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 <tr>
-<td style="vertical-align: top; width: 402px;">Quickset 17s<br>  </td>
-<td style="vertical-align: top; width: 66px;">19<br> </td>
-<td style="vertical-align: top; width: 66px;">15<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Feb 2, 2014, 8:00am</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">Synergy 17b<br>  </td>
-<td style="vertical-align: top; width: 66px;">11<br> </td>
-<td style="vertical-align: top; width: 66px;">12<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 19, 2014, 4:30pm</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">9<br>  </td>"
-<td style="vertical-align: top; width: 66px;">20<br>  </td>"
-<td style="vertical-align: top; width: 66px;">15<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">VA Elite 16 <br>  </td>
-<td style="vertical-align: top; width: 66px;">25<br> </td>
-<td style="vertical-align: top; width: 66px;">13<br> </td>
-<td style="vertical-align: top; width: 66px;">11<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 19, 2014, 2:30pm</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">18<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">15<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">Volley FX16 <br>  </td>
-<td style="vertical-align: top; width: 66px;">25<br> </td>
-<td style="vertical-align: top; width: 66px;">14<br> </td>
-<td style="vertical-align: top; width: 66px;">7<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 19, 2014, 8:30am</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">Pitt Prim 16 <br>  </td>
-<td style="vertical-align: top; width: 66px;">18<br> </td>
-<td style="vertical-align: top; width: 66px;">17<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 18, 2014, 4:00pm</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">REVO 16 S W<br>  </td>
-<td style="vertical-align: top; width: 66px;">15<br> </td>
-<td style="vertical-align: top; width: 66px;">19<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 18, 2014, 3:00pm</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">Power 16lib <br>  </td>
-<td style="vertical-align: top; width: 66px;">14<br> </td>
-<td style="vertical-align: top; width: 66px;">22<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-</tbody>
-</table>
-<br><br>
-
-<p1>Match start:Jan 18, 2014, 10:00am</p1>
-<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">25<br>  </td>"
-<td style="vertical-align: top; width: 66px;">22<br>  </td>"
-<td style="vertical-align: top; width: 66px;">15<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-</tr>
-<tr>
-<td style="vertical-align: top; width: 402px;">MAVBC 16<br>  </td>
+<td style="vertical-align: top; width: 402px;">state college<br>  </td>
 <td style="vertical-align: top; width: 66px;">23<br> </td>
 <td style="vertical-align: top; width: 66px;">25<br> </td>
-<td style="vertical-align: top; width: 66px;">13<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
 </tr>
 </tbody>
 </table>
 <br><br>
-
-<p1>Match start:Jan 18, 2014, 8:00am</p1>
+<p1>Match start:September 28, 2013, 11:52 am</p1>
 <table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; width: 402px;">POWER 16LV<br> </td>
-<td style="vertical-align: top; width: 66px;">21<br>  </td>"
-<td style="vertical-align: top; width: 66px;">26<br>  </td>"
-<td style="vertical-align: top; width: 66px;">11<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">24<br>  </td>"
+<td style="vertical-align: top; width: 66px;">25<br>  </td>"
 <td style="vertical-align: top; width: 66px;">0<br>  </td>
 </tr>
 <tr>
-<td style="vertical-align: top; width: 402px;">VA Elite 16<br>  </td>
-<td style="vertical-align: top; width: 66px;">25<br> </td>
-<td style="vertical-align: top; width: 66px;">24<br> </td>
+<td style="vertical-align: top; width: 402px;">Cumberland valley<br>  </td>
+<td style="vertical-align: top; width: 66px;">26<br> </td>
 <td style="vertical-align: top; width: 66px;">15<br> </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
-<td style="vertical-align: top; width: 66px;">0<br>  </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
 </tr>
 </tbody>
 </table>
 <br><br>
-
+<p1>Match start:September 28, 2013, 10:06 am</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br> </td>"
+<td style="vertical-align: top; width: 66px;">25<br> </td>"
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">bishop guilfoyle<br>  </td>
+<td style="vertical-align: top; width: 66px;">16<br> </td>
+<td style="vertical-align: top; width: 66px;">23<br> </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+</tbody>
+</table>
+<br><br>
+<p1>Match start:September 28, 2013, 8:06 am</p1>
+<table style="text-align: left; width: 600px; height: 60px;" border="1" cellpadding="2" cellspacing="2">
+<tbody>
+<tr>
+<td style="vertical-align: top; width: 402px;">PARKLAND<br> </td>
+<td style="vertical-align: top; width: 66px;">25<br> </td>"
+<td style="vertical-align: top; width: 66px;">25<br> </td>"
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+<tr>
+<td style="vertical-align: top; width: 402px;">Shaler<br></td>
+<td style="vertical-align: top; width: 66px;">16<br> </td>
+<td style="vertical-align: top; width: 66px;">20<br> </td>
+<td style="vertical-align: top; width: 66px;">0<br> </td>
+</tr>
+</tbody>
+</table>
+<br><br>
